--- a/css/estilos-dist.css
+++ b/css/estilos-dist.css
@@ -335,9 +335,8 @@ footer{
 	nav{
 		position: fixed;
 		width: 80%;
-		height: calc(100% - 70px);
+		height: 100%;
 		left: -100%;
-		overflow: scroll;
 	}
 	nav ul li{
 		border-bottom: 1px solid #fff;
@@ -356,6 +355,10 @@ footer{
 	}
 	header h1{
 		font-size: 25px;
+	}
+	nav{
+		overflow: scroll;
+		height: calc(100% - 70px);
 	}
 	.consoles .interno .texbox{
 		text-align: center;
