--- a/css/estilos-dist.css
+++ b/css/estilos-dist.css
@@ -114,6 +114,7 @@ nav ul li a{
 }
 
 nav ul li a:hover{
+    transition: 0.3s;
 	background-color: #3ead47;
 }
 .menu-show{
@@ -273,16 +274,26 @@ article img{
 .options .options-social a{
 	color: #55ACEE;
 	font-size: 1.3em;
+    display: inline-block
 }
 
 .options .options-social a:first-child{
 	color: #3b5998;
-}
+ }
 
 .options .options-social a:last-child{
 	color: #dd4b39;
+ }
+
+.options .options-social a:hover{
+    transition: 0.5s;
+	color: #5BB32E;
+    -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+            transform: scale(1.5)
 }
 
+/* Opción leer más */
 .options .read-more{
 	background: #66cc33;
 	color: #fff;
@@ -311,6 +322,7 @@ aside div{
     display: block;
     width: 100%
 }
+
 /* estilos fooder */
 footer{
     background: #292828;
